# mcp-crawl4ai-rag

./: .env.example  .gitignore  DOMAIN_ACCESS_TROUBLESHOOTING.md  README.md  VPS_SERVICES_STATUS.md  apple_comprehensive_content_20250713_185459.txt  apple_comprehensive_content_20250713_214803.txt  apple_comprehensive_content_20250713_215547.txt  check_chunks_data.py  delete_test_data.py  deploy_pgbouncer_auto.sh  pyproject.toml  run_crawler.sh  test_batch_marking.py  test_batch_optimization.py  test_bulk_update.py  test_database_migration.py  test_dual_chunking.py
.cookie_cache/: apple_cookies.json
config/: README.md  api_key_cleaner.py  api_keys.txt.backup
database-public-access/: database_api_server.py  monitor_access.py  setup_public_access.sh
docs/: crawl4ai-special-designs.md  database_schema.md  pgvector_2560_dimensions_solution.md  qwen3_models_comprehensive_evaluation.md  qwen3_models_summary.md  skip_patterns_technical_explanation.md  unified_cookie_cache.md
examples/: cloudflare-worker.js
frontend/: api.py  index.html  script.js  style.css
knowledge_graphs/: test_neo4j_comprehensive.py  test_script.py
pgbouncer/: pgbouncer_monitor.py  update_config_for_pgbouncer.py
scripts/: README.md  check_index_status.sql  check_status.sh  create_indexes.sql  rebuild_indexes_remote.sh  run_indexes.sh  vps_create_hnsw.sql  vps_hnsw_creator.py  vps_run_hnsw.sh
src/: apple-dev-mcp.py  apple_content_extractor.py  crawl4ai_mcp.py  embedding_provider.py  local_reranker.py  postgres_client.py  qwen3_embeddings.py  utils.py
test/: test_apple_docs.py
(+96 files in other folders)
